README: Added text to the user stories and testing sections Map, on desktop: reduced size of the map, the itinerary block and the map and itinerary row so that when the focus is on the map and itinerary, the top of the results table which is below will also show so that users now it is there and they can scroll down to it. Changed scroll on itinerary and results table to auto so that scrollbars only appear when content overflows. Added functionality to change the view when all fields have been set and results are showing on the map – to show the map and top of the results table under that (desktop). Changed size of results block (under map on desktop) to auto so that when no results are showing the block is small. This fixes the issue with a large empty blue block on the page. This caused an issue with the reset function as the size of the page changed when resetting. Therefore I have added window.location.hash = “title” to the resetForm function to make sure the top of the page is shown when resetting.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 #map {
-  height: 100%;
+  height: 400px;
   width: 100%;
   border-radius: 3px;
   margin-bottom: 30px;
@@ -122,7 +122,7 @@ h4 {
 }
 
 #map-row {
-  height: 650px;
+  height: 450px;
   padding: 25px 40px 25px 30px;
   background-color: #4cbdc5;
 }
@@ -140,10 +140,9 @@ h4 {
 }
 
 #listing {
-  position: relative;
   width: 100%;
-  height: 470px;
-  overflow-y: scroll;
+  height: auto;
+  overflow-y: auto;
   left: 0;
   cursor: pointer;
   background-color: #009cbf;
@@ -329,35 +328,41 @@ div#iw-rating {
 /*----------------------------------------Results Table*/
 
 #resultsTable {
-  height: 0px;
+  height: 100%;
   width: 100%;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 0px 15px 20px 15px;
 }
 
 #results {
   width: 100%;
+  height: 100%;
   padding-top: 15px;
   padding-bottom: 15px;
-  position: absolute;
+  position: relative;
+}
+
+.result-tr {
+    padding: 7px;
 }
 
 .listing-name-block {
-  display: inline-block;
+  display: inline-grid;
+  vertical-align: top;
 }
 
 .listing-icon-block {
-  display: inline-block;
+  display: inline-grid;
+  vertical-align: top;
   padding-right: 15px;
 }
 
 /*-------------------------------------Itinerary*/
 
 #actualItinerary {
-  height: 450px;
+  height: 280px;
   min-width: 100%;
   list-style: none;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .inner-div {
